--- a/jas.html
+++ b/jas.html
@@ -5,8 +5,8 @@
 
 <body>
   <h1> Hi! My name is Jasmine! <h1>
-  <a href="/Users/demouser/Documents/Blogasaurus/proflie.html"> About me!</a>
+  <a href="https://github.com/jasminechau2/Jasminechau2/blob/master/profile.html"> About me!</a>
   <p>
-    <a href="/Users/demouser/Documents/Blogasaurus/post.html"> What I did this Summer!</a>
+    <a href="https://github.com/jasminechau2/Jasminechau2/blob/master/post.html"> What I did this Summer!</a>
 </p>
 </body>
