--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <h1> Hi! My name is Jasmine! </h1>
 
-  <a href="/Users/demouser/Jasminechau2/profile.html"> About me!</a>
+  <a href="https://jasminechau2.github.io/Users/demouser/Jasminechau2/profile.html"> About me!</a>
   <p>
-    <a href="/Users/demouser/Jasminechau2/post.html"> What I did this Summer!</a>
+    <a href="https://jasminechau2.github.io/Users/demouser/Jasminechau2/post.html"> What I did this Summer!</a>
 </p>
 </body>
 </html>
