pushing new files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <title> Jasmine's Blogasaurus </title>
-  <link rel="stylesheet" href="stylesheet.CSS">
+  <link rel="stylesheet" herf="stylesheet.css"></link>
 </head>
 
 <body>
 
-  <h1> Hi! My name is Jasmine! </h1>
+  <h2 id:name> Hi! My name is Jasmine! </h2>
 
   <a href="/Users/demouser/Jasminechau2/profile.html"> About me!</a>
   <p>
