--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,9 @@
+<html>
 <h1> About Me <h1>
-  <h2> Summary <h2>
-    <p> I am a frist generation college student going to Middlebury College.
+  <h2> Summary <h2> <br>
+    <p> I am a first generation college student going to Middlebury College.
       This means that I am moving from California to Vermont.
       It is going to be a big change! Please follow me on my adventure.
     </p>
-    
+    <img src
+    </html>
