--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <html>
-<head>
-  <title> Jasmine's Blogasaurus </title>
-  <link rel="stylesheet" herf="stylesheet.css"></link>
-</head>
+  <head>
+    <title> Jasmine's Blogasaurus </title>
+    <link rel="stylesheet" href="stylesheet.css"></link>
+    <script src="java.js"></script>
+  </head>
 
-<body>
-
-  <h2 id:name> Hi! My name is Jasmine! </h2>
-
-  <a href="/Users/demouser/Jasminechau2/profile.html"> About me!</a>
-  <p>
-    <a href="/Users/demouser/Jasminechau2/post.html"> What I did this Summer!</a>
-</p>
-</body>
+  <body background = "https://s-media-cache-ak0.pinimg.com/originals/99/73/34/997334584aa2bbda7f4c7adc83aa03d5.jpg">
+  <h1 id="header"> Hi! My name is Jasmine! </h1>
+    <div id="linkedPosts">
+      <h2> Check out what I am doing: </h2>
+            <a href="/Users/demouser/Jasminechau2/profile.html"> About me!</a>
+        <p>
+            <a href="/Users/demouser/Jasminechau2/post.html"> What I did this Summer!</a>
+        </p>
+      </div>
+      <div id="contact">
+        <h3 class="randomheaders"> Contact me:<br> </h3>
+          <a href="https://twitter.com/jasmocat"> Twitter </a>
+        </div>
+  </body>
 </html>
